Introduce configuration for the cordova logic

--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/LoginSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/LoginSuccess.cshtml
@@ -14,19 +14,17 @@
 }
 
 @section docReady {
-    <script type="text/javascript">
-    function postCordovaMessage() {
-        /* Send an action = 'close' JSON object to Cordova via postMessage API */
-        var message = { action: 'close' };
-        if (!webkit.messageHandlers.cordova_iab) {
-            console.warn('Cordova IAB postMessage API not found!');
-            // throw 'Cordova IAB postMessage API not found!';
-        } else {
-            console.log('Message sent!');
-            webkit.messageHandlers.cordova_iab.postMessage(JSON.stringify(message));
-        }
-    }
-    </script>
+    <script type="text/javascript">function postCordovaMessage() {
+            /* Send an action = 'close' JSON object to Cordova via postMessage API */
+            var message = { action: 'close' };
+            if (!webkit.messageHandlers.cordova_iab) {
+                console.warn('Cordova IAB postMessage API not found!');
+                // throw 'Cordova IAB postMessage API not found!';
+            } else {
+                console.log('Message sent!');
+                webkit.messageHandlers.cordova_iab.postMessage(JSON.stringify(message));
+            }
+        }</script>
 
 }
 
@@ -38,4 +36,9 @@
     You have been authenticated. Please close this page to continue!
 </p>
 
-<a abp-button="Primary" onclick="postCordovaMessage()">Close</a>
+@if (Model.IsCordovaEnabled)
+{
+    <div class="d-grid gap-2">
+        <a abp-button="Primary" onclick="postCordovaMessage()">Close</a>
+    </div>
+}
