--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/LogoutSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/LogoutSuccess.cshtml
@@ -7,12 +7,24 @@
 @using Volo.Abp.Settings
 @using AspNetCore.ReCaptcha
 @model PolpAbp.Presentation.Account.Web.Pages.Account.LogoutSuccessModel
+@inject IHtmlLocalizer<AccountResource> L
 @{
     ViewBag.Title = "Logout Success";
     ViewBag.Description = "Displays the success message after a user logs out of the system.";
 }
 
-@inject IHtmlLocalizer<AccountResource> L
+@section docReady {
+    <script type="text/javascript">
+        Lockr.prefix = 'lockr_';
+        function cleanUpUserData(ev) {
+            ev.preventDefault();
+            Lockr.flush();
+            const toastElem = document.getElementById('cleanedToast');
+            const toast = new bootstrap.Toast(toastElem);
+            toast.show();
+        }
+    </script>
+}
 
 <h4 class="mb-4 fw-semibold">
     @L["LoggedOutTitle"]
@@ -22,4 +34,31 @@
     @L["LoggedOutText"]
 </p>
 
-<a abp-button="Primary" asp-page="./Login">@L["Login"]</a>
+<div class="alert alert-warning">
+    If you are using a public machine, please clean up 
+    any stored information with the button below. 
+    <div class="d-grid gap-2">
+        <a abp-button="Info" onclick="cleanUpUserData(event);">Clean up data</a>
+    </div>
+</div>
+
+<div class="d-flex flex-column align-items-start mt-5 mb-3">
+    <h6>Helpful links</h6>
+    <ul>
+        <li>
+            <a abp-button="Primary" asp-page="./Login">@L["Login"]</a>
+        </li>
+    </ul>
+</div>
+
+<div class="toast-container position-fixed bottom-0 end-0 p-3">
+    <div id="cleanedToast" class="toast text-bg-info" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+            <strong class="me-auto">Clean</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body">
+            The stored data has been cleaned up.
+        </div>
+    </div>
+</div>
