Fix reset password success page

--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPasswordSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPasswordSuccess.cshtml
@@ -1,4 +1,4 @@
-﻿@@page
+﻿@page
 @using Microsoft.AspNetCore.Mvc.Localization
 @using Microsoft.Extensions.Localization
 @using Volo.Abp.Account.Localization
@@ -6,7 +6,7 @@
 @using Volo.Abp.AspNetCore.Mvc.UI.MultiTenancy.Localization
 @using Volo.Abp.Settings
 @using AspNetCore.ReCaptcha
-@model PolpAbp.Presentation.Account.Web.Pages.Account.ResetPasswordConfirmationModel
+@model PolpAbp.Presentation.Account.Web.Pages.Account.ResetPasswordSuccessModel
 @inject IHtmlLocalizer<AccountResource> L
 
 @{
