--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPasswordSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPasswordSuccess.cshtml
@@ -20,4 +20,6 @@
 
 <p>@L["YourPasswordIsSuccessfullyReset"]</p>
 
-<a abp-button="Primary" asp-page="./Login">@L["Login"]</a>
+<div class="d-grid gap-2">
+    <a abp-button="Primary" asp-page="./Login">@L["Login"]</a>
+</div>
