--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/LogoutSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/LogoutSuccess.cshtml
@@ -52,7 +52,7 @@
 </div>
 
 <div class="toast-container position-fixed bottom-0 end-0 p-3">
-    <div id="cleanedToast" class="toast text-bg-info" role="alert" aria-live="assertive" aria-atomic="true">
+    <div id="cleanedToast" class="toast bg-info" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
             <strong class="me-auto">Clean</strong>
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
