--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/LogoutSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/LogoutSuccess.cshtml
@@ -36,7 +36,7 @@
 
 <div class="alert alert-warning">
     If you are using a public machine, please clean up 
-    any stored information with the button below. 
+    the stored information with the button below. 
     <div class="d-grid gap-2">
         <a abp-button="Info" onclick="cleanUpUserData(event);">Clean up data</a>
     </div>
@@ -46,7 +46,7 @@
     <h6>Helpful links</h6>
     <ul>
         <li>
-            <a abp-button="Primary" asp-page="./Login">@L["Login"]</a>
+            <a class="btn btn-link fst-italic" asp-page="./Login">@L["Login"]</a>
         </li>
     </ul>
 </div>
