use more specific input for typing the two factor code

--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/TwoFactorSignIn.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/TwoFactorSignIn.cshtml
@@ -26,7 +26,7 @@
     <div class="mb-3" id="password-wrapper">
         <label asp-for="Input.Code" class="form-label"></label>
         <div class="input-group">
-            <input asp-for="Input.Code" class="form-control" data-auto-focus="true" autocomplete="off" />
+            <input asp-for="Input.Code" class="form-control" data-auto-focus="true" type="number" autocomplete="off" />
             <button type="button" class="toggle-password btn btn-outline-secondary">
                 <i class="toggle-icon fa fa-eye"></i>
             </button>
