Improve reg pages: 1. No spell check for forms; 2. Show password; 3. Auto validate confirm password

--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/FindUser.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/FindUser.cshtml
@@ -46,7 +46,7 @@ else
         Please type your organization name
     </div>
 
-    <form method="post">
+    <form method="post" spellcheck="false">
 
         <abp-input asp-for="Input.TenantName" auto-focus="true"
                label="@L["DisplayName:TenantName"].Value" autocomplete="organization" />
