--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/Register.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/Register.cshtml
@@ -22,7 +22,7 @@
 </div>
 
 
-<form method="post" class="py-4">
+<form method="post" class="py-4" spellcheck="false">
     <h5 class="mb-4">
         <span class="badge bg-dark me-1">1/3</span>
         First, please provide your organization information as below
