--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/RegisterConfirm.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/RegisterConfirm.cshtml
@@ -22,7 +22,7 @@
     <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 100%"></div>
 </div>
 
-<form method="post" class="py-4">
+<form method="post" class="py-4" spellcheck="false">
     <h5 class="mb-4">
         <span class="badge bg-dark me-1">3/3</span>
         Last, please check the information below and submit it
