--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResendActivationLink.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResendActivationLink.cshtml
@@ -39,3 +39,12 @@
         </abp-button>
     </div>
 </form>
+
+<div class="d-flex flex-column align-items-start mt-5 mb-3">
+    <h6>@L["Page:HelpfulLinks"]</h6>
+    <ul>
+        <li>
+            Already a member? Please <a class="btn btn-link fst-italic" href="@Url.Page("./Login")">@L["Login"]</a>
+        </li>
+    </ul>
+</div>
