--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResendActivationLink.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResendActivationLink.cshtml
@@ -44,7 +44,7 @@
     <h6>@L["Page:HelpfulLinks"]</h6>
     <ul>
         <li>
-            Already a member? Please <a class="btn btn-link fst-italic" href="@Url.Page("./Login")">@L["Login"]</a>
+            <a class="btn btn-link fst-italic" href="@Url.Page("./Login")">@L["Login"]</a>
         </li>
     </ul>
 </div>
