--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/Login.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/Login.cshtml
@@ -120,13 +120,17 @@
 
 <div class="d-flex align-items-center mb-2">
     <a class="me-3 go-back text-primary" style="cursor:pointer;" data-bind="visible: canGoBack">
-        <i class="fa fa-long-arrow-left"></i> 
+        <i class="fa fa-long-arrow-left"></i>
     </a>
     <h4 class="fw-semibold">Login</h4>
 </div>
-<div class="mb-4 ms-2">
+<div class="mb-2 ms-2">
     @L["AreYouANewUser"]
-    <a href="@Url.Page("./Register")">@L["Register"]</a>
+    <a href="@Url.Page("./MemberRegister")">@L["MemberRegister"]</a>
+</div>
+<div class="mb-4 ms-2">
+    @L["OrganizationDoesNotExist"]
+    <a href="@Url.Page("./Register")">@L["OrganizationRegister"]</a>
 </div>
 
 @if (Model.IsUserNameEnabled)
@@ -142,20 +146,20 @@
             <div class="d-flex flex-wrap">
                 <div class="mb-3 me-3">
                     <input type="radio" class="btn-check" name="Resolution.OptionId"
-                   id="Resolution-By-Email" value="1" autocomplete="off" checked>
+                           id="Resolution-By-Email" value="1" autocomplete="off" checked>
                     <label class="btn btn-outline-dark" for="Resolution-By-Email">Email Address</label>
                 </div>
 
                 <div class="mb-3">
                     <input type="radio" class="btn-check" name="Resolution.OptionId"
-                   id="Resolution-By-Name" value="2" autocomplete="off">
+                           id="Resolution-By-Name" value="2" autocomplete="off">
                     <label class="btn btn-outline-dark" for="Resolution-By-Name">User Name</label>
                 </div>
             </div>
 
             <div class="d-grid gap-2">
                 <abp-button type="submit" button-type="Primary" name="Action"
-                    value="Resolution" class="btn-block mt-3">
+                            value="Resolution" class="btn-block mt-3">
                     @L["Continue"]
                     <span class="spinner-box">
                     </span>
@@ -214,7 +218,7 @@
             <input asp-for="Input.IsUsingEmailAddress" type="hidden" value="true" autocomplete="off" />
 
             <abp-input asp-for="Input.UserNameOrEmailAddress" auto-focus="true" type="email"
-               label="@L["DisplayName:Email"].Value" autocomplete="email" />
+                       label="@L["DisplayName:Email"].Value" autocomplete="email" />
 
             <div class="d-grid gap-2">
                 <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="mt-3">
@@ -223,7 +227,7 @@
                     </span>
                 </abp-button>
                 <abp-button type="submit" button-type="Secondary" formnovalidate="formnovalidate"
-                    name="Action" value="Cancel" class="mt-3">
+                            name="Action" value="Cancel" class="mt-3">
                     @L["Back"]
                 </abp-button>
             </div>
@@ -239,7 +243,7 @@
             <input asp-for="Input.IsUsingEmailAddress" type="hidden" value="false" autocomplete="off" />
 
             <abp-input asp-for="Input.UserNameOrEmailAddress" auto-focus="true"
-               label="@L["DisplayName:UserName"].Value" autocomplete="username" />
+                       label="@L["DisplayName:UserName"].Value" autocomplete="username" />
 
             <div class="d-grid gap-2">
                 <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="mt-3">
@@ -247,7 +251,7 @@
                     <span class="spinner-box"></span>
                 </abp-button>
                 <abp-button type="submit" button-type="Secondary" formnovalidate="formnovalidate"
-                    name="Action" value="Cancel" class="mt-3">
+                            name="Action" value="Cancel" class="mt-3">
                     @L["Back"]
                 </abp-button>
             </div>
@@ -268,7 +272,7 @@ else
                 </div>
                 <div class="flex-grow-1 ms-3">
                     <div class="d-flex flex-row justify-content-between mb-0">
-                            <a class="pick-me" style="cursor: pointer; text-decoration: none;" data-bind="attr: {'data-email': email}">
+                        <a class="pick-me" style="cursor: pointer; text-decoration: none;" data-bind="attr: {'data-email': email}">
                             <h6 data-bind="text: email" class="text-dark">
                             </h6>
                             <p class="text-muted">
@@ -304,7 +308,7 @@ else
         <input asp-for="Input.IsUsingEmailAddress" type="hidden" value="true" autocomplete="off" />
 
         <abp-input asp-for="Input.UserNameOrEmailAddress" auto-focus="true" type="email"
-               label="@L["DisplayName:Email"].Value" autocomplete="email" />
+                   label="@L["DisplayName:Email"].Value" autocomplete="email" />
 
         <div class="d-grid gap-2">
             <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="mt-3">
@@ -315,3 +319,15 @@ else
         </div>
     </form>
 }
+
+<div class="d-flex flex-column align-items-start mt-5 mb-3">
+    <h6>@L["Page:HelpfulLinks"]</h6>
+    <ul>
+        <li>
+            <a class="btn btn-link fst-italic" href="@Url.Page("./Register")">@L["OrganizationRegister"]</a>
+        </li>
+        <li>
+            <a class="btn btn-link fst-italic" href="@Url.Page("./MemberRegister")">@L["MemberRegister"]</a>
+        </li>
+    </ul>
+</div>
