--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/Register.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/Register.cshtml
@@ -11,11 +11,16 @@
 @{
     ViewBag.Title = "Organization Registration";
     ViewBag.Description = "Creates your organization account, including setting up the organization administrator.";
+    ViewBag.HideTenancyView = true;
 }
 
-<h4 class="mb-4 fw-semibold">
+<h4 class="mb-2 fw-semibold">
     Create your organization
 </h4>
+<div class="mb-4 ms-2">
+    @L["AlreadyRegistered"]
+    <a href="@Url.Page("./Login")">@L["Login"]</a>
+</div>
 
 <div class="progress">
     <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 33%"></div>
@@ -38,3 +43,12 @@
     </div>
 
 </form>
+
+<div class="d-flex flex-column align-items-start mt-5 mb-3">
+    <h6>@L["Page:HelpfulLinks"]</h6>
+    <ul>
+        <li>
+            <a class="btn btn-link fst-italic" href="@Url.Page("./Login")">@L["Login"]</a>
+        </li>
+    </ul>
+</div>
