Fix Recaptcha on registration page

--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
@@ -33,6 +33,7 @@
     <abp-input asp-for="Input.EmailAddress" autocomplete="email" />
     <div class="mb-3" id="password-wrapper">
         <label for="Input_Password" class="form-label">@L["DisplayName:Password"]</label>
+        <span> * </span>
         <div class="input-group">
             <input class="form-control" id="Input_Password" type="password" autocomplete="new-password" asp-for="Input.Password" />
             <button type="button" class="toggle-password btn btn-outline-secondary">
@@ -42,6 +43,13 @@
         <span asp-validation-for="Input.Password" class="text-danger"></span>
     </div>
     <abp-input asp-for="Input.ConfirmPassword" autocomplete="off" />
+
+    @if (Model.IsRecaptchaEnabled)
+    {
+        <div class="mb-3">
+            @Html.ReCaptcha()
+        </div>
+    }
 
     <div class="d-grid gap-2">
         <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="mt-3">
