--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
@@ -9,12 +9,12 @@
 @model PolpAbp.Presentation.Account.Web.Pages.Account.MemberRegisterModel
 @inject IHtmlLocalizer<AccountResource> L
 @{
-    ViewBag.Title = "Register For Your Organization";
+    ViewBag.Title = "Join your organization";
     ViewBag.Description = "Becomes a member of your organization.";
 }
 
 <h4 class="mb-2 fw-semibold">
-    Register For Your Organization
+    Join Your Organization
 </h4>
 <div class="mb-4 ms-2">
     @L["AlreadyRegistered"]
