--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ExternalLogin.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ExternalLogin.cshtml
@@ -9,8 +9,9 @@
 @model PolpAbp.Presentation.Account.Web.Pages.Account.ExternalLoginModel
 @inject IHtmlLocalizer<AccountResource> L
 @{
-    ViewBag.Title = "SSO Login entry";
-    ViewBag.Description = "Redirects you to your SSO provider.";
+    ViewBag.Title = "Single Sign-On Login";
+    ViewBag.Description = "Log in to the system using your existing credentials from your SSO provider";
+    ViewBag.Keywords = "login, sign in, account, SSO";
 }
 
 <h4 class="mb-4 fw-semibold">
