--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ForgotPassword.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ForgotPassword.cshtml
@@ -10,8 +10,9 @@
 @inject IHtmlLocalizer<AccountResource> L
 
 @{
-    ViewBag.Title = "Gets Back Your Password";
-    ViewBag.Description = "Requests to get a password reset link if you forgets your password.";
+    ViewBag.Title = "Forgot Password";
+    ViewBag.Description = "Forgot your password? No problem! We can help you reset it.";
+    ViewBag.Keywords = "forgot password,reset password,email address,email";
 }
 
 <h4 class="mb-4 fw-semibold">
@@ -21,7 +22,7 @@
 <p>@L["SendPasswordResetLink_Information"]</p>
 
 <div class="alert alert-info d-flex align-items-center" role="alert">
-    Please check your information and submit it
+    Please review your information and submit it
 </div>
 
 <form method="post">
