--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/Logout.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/Logout.cshtml
@@ -1,4 +1,7 @@
 ﻿@page
 @model PolpAbp.Presentation.Account.Web.Pages.Account.LogoutModel
 @{
+    ViewBag.Title = "Log Out";
+    ViewBag.Description = "Log out of your account.";
+    ViewBag.Keywords = "log out";
 }
