--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/LogoutSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/LogoutSuccess.cshtml
@@ -9,8 +9,9 @@
 @model PolpAbp.Presentation.Account.Web.Pages.Account.LogoutSuccessModel
 @inject IHtmlLocalizer<AccountResource> L
 @{
-    ViewBag.Title = "Logout Success";
-    ViewBag.Description = "Displays the success message after a user logs out of the system.";
+    ViewBag.Title = "Log Out Success";
+    ViewBag.Description = "You have successfully logged out of your account.";
+    ViewBag.Keywords = "log out success,logged out";
 }
 
 @section docReady {
