--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
@@ -9,8 +9,9 @@
 @model PolpAbp.Presentation.Account.Web.Pages.Account.MemberRegisterModel
 @inject IHtmlLocalizer<AccountResource> L
 @{
-    ViewBag.Title = "Join your organization";
-    ViewBag.Description = "Becomes a member of your organization.";
+    ViewBag.Title = "Join Organization";
+    ViewBag.Description = "Provide your information to join your organization.";
+    ViewBag.Keywords = "join organization";
 }
 
 <h4 class="mb-2 fw-semibold">
