--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/PasswordResetLinkSent.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/PasswordResetLinkSent.cshtml
@@ -9,8 +9,9 @@
 @model PolpAbp.Presentation.Account.Web.Pages.Account.PasswordResetLinkSentModel
 @inject IHtmlLocalizer<AccountResource> L
 @{
-    ViewBag.Title = "Password Reset Result";
-    ViewBag.Description = "Displays the result after you resets your password.";
+    ViewBag.Title = "Password Reset Link Requested";
+    ViewBag.Description = "Please check your email and follow the instructions in the email to reset your password.";
+    ViewBag.Keywords = "password reset link sent,password reset";
 }
 
 <h4 class="mb-4 fw-semibold">
