--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/Register.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/Register.cshtml
@@ -10,12 +10,13 @@
 @inject IHtmlLocalizer<AccountResource> L
 @{
     ViewBag.Title = "Organization Registration";
-    ViewBag.Description = "Creates your organization account, including setting up the organization administrator.";
+    ViewBag.Description = "Register your organization today to access all of our features and benefits.";
+    ViewBag.keywords = "organization registration,user management,access control,audit logs,events,subscriptions,organization structure,form design,form publication,form flow,workflow";
     ViewBag.HideTenancyView = true;
 }
 
 <h4 class="mb-2 fw-semibold">
-    Create your organization
+    Create your organization account
 </h4>
 <div class="mb-4 ms-2">
     @L["AlreadyRegistered"]
