--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/RegisterDefineAdmin.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/RegisterDefineAdmin.cshtml
@@ -9,12 +9,13 @@
 @model PolpAbp.Presentation.Account.Web.Pages.Account.RegisterDefineAdminModel
 @inject IHtmlLocalizer<AccountResource> L
 @{
-    ViewBag.Title = "Organization Administrator Information";
-    ViewBag.Description = "Collects the administrator information of your organization for creating your organization account.";
+    ViewBag.Title = "Organization Registration - Provide Administrator Information";
+    ViewBag.Description = "Provide the administrator information for your organization.";
+    ViewBag.Keywords = "Provide Administrator Information, organization registration";
 }
 
 <h4 class="mb-4 fw-semibold">
-    Create your organization
+    Create your organization account
 </h4>
 
 <div class="progress">
