--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPassword.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPassword.cshtml
@@ -9,8 +9,9 @@
 @model PolpAbp.Presentation.Account.Web.Pages.Account.ResetPasswordModel
 @inject IHtmlLocalizer<AccountResource> L
 @{
-    ViewBag.Title = "Resets Your Passowrd";
-    ViewBag.Description = "Resets your password after you clicks the reset password link.";
+    ViewBag.Title = "Reset Password";
+    ViewBag.Description = "Reset your password now.";
+    ViewBag.Keywords = "reset password";
 }
 
 <h4 class="mb-4 fw-semibold">
