--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/TwoFactorRequest.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/TwoFactorRequest.cshtml
@@ -9,12 +9,13 @@
 @model PolpAbp.Presentation.Account.Web.Pages.Account.TwoFactorRequestModel
 @inject IHtmlLocalizer<AccountResource> L
 @{
-    ViewBag.Title = "Request Two Facor Code";
-    ViewBag.Description = "Requests a two factor code.";
+    ViewBag.Title = "Request Two Factor Authentication Code";
+    ViewBag.Description = "Request a two factor authentication code now.";
+    ViewBag.Keywords = "request two factor authentication code,2fa code,security,authentication";
 }
 
 <h4 class="mb-4 fw-semibold">
-    Get Two Factor Code
+    Request Two Factor Authentication Code
 </h4>
 
 <p>
