--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/TwoFactorSignIn.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/TwoFactorSignIn.cshtml
@@ -9,12 +9,13 @@
 @model PolpAbp.Presentation.Account.Web.Pages.Account.TwoFactorSignInModel
 @inject IHtmlLocalizer<AccountResource> L
 @{
-    ViewBag.Title = "Two Facor Login";
-    ViewBag.Description = "Log into the system with the two factor code.";
+    ViewBag.Title = "Enter Two Factor Authentication Code";
+    ViewBag.Description = "Enter your two factor authentication code to log into your account.";
+    ViewBag.Keywords = "two factor authentication code";
 }
 
 <h4 class="mb-4 fw-semibold">
-    Two Factor Login
+    Enter Two Factor Authentication Code
 </h4>
 
 <div class="alert alert-info">
