--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/UpdatePassword.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/UpdatePassword.cshtml
@@ -10,8 +10,9 @@
 @model PolpAbp.Presentation.Account.Web.Pages.Account.UpdatePasswordModel
 @inject IHtmlLocalizer<AccountResource> L
 @{
-    ViewBag.Title = "Update your password";
-    ViewBag.Description = "Update your password as requested.";
+    ViewBag.Title = "Update Password";
+    ViewBag.Description = "Update your password to improve account security.";
+    ViewBag.Keywords = "update password";
 }
 
 <h4 class="mb-4 fw-semibold">
@@ -20,7 +21,7 @@
 
 <div class="alert alert-info d-flex align-items-center" role="alert">
     <div>
-        Please update your password first
+        Please update your password to improve account security.
     </div>
 </div>
 
