--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResendActivationLinkSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResendActivationLinkSuccess.cshtml
@@ -9,8 +9,9 @@
 @model PolpAbp.Presentation.Account.Web.Pages.Account.ResendActivationLinkSuccessModel
 @inject IHtmlLocalizer<AccountResource> L
 @{
-    ViewBag.Title = "Success Message Following Resending Account Activation Link";
-    ViewBag.Description = "Displays the success message after your account activation link is sent out.";
+    ViewBag.Title = "Account Activation Link Sent";
+    ViewBag.Description = "Your account activation link has been sent.";
+    ViewBag.Keywords = "account activation link sent";
 }
 
 <h4 class="mb-4 fw-semibold">
