--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPasswordSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPasswordSuccess.cshtml
@@ -10,8 +10,9 @@
 @inject IHtmlLocalizer<AccountResource> L
 
 @{
-    ViewBag.Title = "Password Reset Success Message";
-    ViewBag.Description = "Displays a success message after you have reset your password.";
+    ViewBag.Title = "Password Reset Success";
+    ViewBag.Description = "Your password has been successfully reset.";
+    ViewBag.Keywords = "password reset success";
 }
 
 <h4 class="mb-4 fw-semibold">
