Addressed #59: Error message when the registration is disabled

--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/FindUser.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/FindUser.cshtml
@@ -77,5 +77,8 @@ else
         <li>
             <a class="btn btn-link fst-italic" href="@Url.Page("./Register")">@L["Register"]</a>
         </li>
+        <li>
+            <a class="btn btn-link fst-italic" href="@Url.Page("./MemberRegister")">@L["MemberRegister"]</a>
+        </li>
     </ul>
 </div>
