Display the reset button when possible

--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/LocalLogin.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/LocalLogin.cshtml
@@ -13,6 +13,7 @@
     ViewBag.Title = "Username/Password Login";
     ViewBag.Description = "Log in to your account using your username and password.";
     ViewBag.Keywords = "login, sign in, account, username, email, password";
+    ViewBag.ShowResetButton = true;
 
     var reActivationLink = Url.Page("./ResendActivationLink", new
     {
