--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
@@ -12,6 +12,7 @@
     ViewBag.Title = "Join Organization";
     ViewBag.Description = "Provide your information to join your organization.";
     ViewBag.Keywords = "join organization";
+    ViewBag.ShowResetButton = true;
 }
 
 <h4 class="mb-2 fw-semibold">
