Generalize register page to support policy consent

--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
@@ -46,6 +46,8 @@
     </div>
     <abp-input asp-for="Input.ConfirmPassword" autocomplete="off" />
 
+    @await Component.InvokeAsync("PolicyConsent")
+
     @if (Model.IsRecaptchaEnabled)
     {
         <div class="mb-3">
