Fixed an issue: Provides a way to get out of the authorization success page. So a user can login again from scratch

--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/AuthorizeSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/AuthorizeSuccess.cshtml
@@ -41,9 +41,11 @@
     You are now logged in and can access the system. Please close this page to continue!
 </p>
 
-@if (Model.IsCordovaEnabled)
-{
-    <div class="d-grid gap-2">
+<div class="d-grid gap-2">
+    @if (Model.IsCordovaEnabled)
+    {
         <a abp-button="Primary" onclick="postCordovaMessage()">Close</a>
-    </div>
-}
+    }
+    <a abp-button="Warning" asp-page="./Logout">@L["Logout"]</a>
+</div>
+
