--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/AuthorizeSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/AuthorizeSuccess.cshtml
@@ -29,17 +29,27 @@
                 console.log('Message sent!');
                 webkit.messageHandlers.cordova_iab.postMessage(JSON.stringify(message));
             }
-
-            deleteAllCookies();
         }
-        function deleteAllCookies() {
-            const cookies = document.cookie.split(";");
-
-            for (let i = 0; i < cookies.length; i++) {
-                const cookie = cookies[i];
-                const eqPos = cookie.indexOf("=");
-                const name = eqPos > -1 ? cookie.substr(0, eqPos) : cookie;
-                document.cookie = name + "=;expires=Thu, 01 Jan 1970 00:00:00 GMT";
+        function logoutUser() {
+            try {
+                $.ajax({
+                    url: "/account/logout",
+                    type: 'POST',
+                    success: function (response) {
+                        // Handle successful logout response here
+                        // This could be a message or redirecting to login page
+                        console.log("Successfully logged out!");
+                        postCordovaMessage();
+                    },
+                    error: function (jqXHR, textStatus, errorThrown) {
+                        // Handle errors during logout
+                        console.error("Error logging out!", textStatus, errorThrown);
+                        postCordovaMessage();
+                    }                   
+                });
+            } catch (ex) { 
+                // todo: 
+                console.error("Unexpected error during logout:", error);
             }
         }
     </script>
@@ -57,7 +67,7 @@
 @if (Model.IsCordovaEnabled)
 {
     <div class="d-grid gap-2">
-        <a abp-button="Primary" onclick="postCordovaMessage()">Close</a>
+        <a abp-button="Primary" onclick="logoutUser()">Close</a>
     </div>
 }
 
